<resources>
    <string name="app_name">SearchPlaces</string>
    <string name="map_broadcast">broadcast chosen latlng</string>
    <string name="offline_message">You are offline</string>
    <string name="failed">Check your internet connection</string>
    <string name="hint_edit_text">Searching for</string>
    <string-array name="distance_units">
        <item>Kilometer (km)</item>
        <item>Mile (mi)</item>
    </string-array>
    <string-array name="distance_units_values">
        <item>km</item>
        <item>miles</item>
    </string-array>
    <string name="save_fav">Add to favourites</string>
    <string name="share_header">Sharing my favourite place with you </string>
    <string name="share_title">\n\n Name: \n</string>
    <string name="progress_dialog_title">Loading</string>
    <string name="list_item_distance">Distance:</string>
    <string name="distance_header">Choose Distance Units</string>
    <string name="distance_sumary">Km or Miles</string>
    <string name="radius_header"> Choose Radius</string>
    <string name="radius_summary">In Km or Miles</string>
    <string name="radius_hint">Enter your choice</string>
    <string name="radius_current">Current radius:</string>
    <string name="share_body_address">\n\nAddress: \n</string>
    <string name="share_latlng">\n\nAnd more specifically, for meytivey lekhet: \n</string>
    <string name="saved_fav">Saved Successfully to Favourites!</string>
    <string name="favs_null">No places in your favourites list</string>
    <string name="progress_dialog_message">Please wait while loading results</string>
    <string name="menu_item_delete">Delete All Favourites</string>
    <string name="menu_item_settings">Settings</string>
    <string name="dialog_fav_message">share or save</string>
    <string name="dialog_fav_title">Share or Save</string>
    <string name="share_fav">Share with your friends</string>


</resources>
